[project]
name = "Alchemynger"
version = "0.1.2"
authors = [
  { name="Resheba", email = "c90de11@gmail.com" },
]
description = "Simple SQLAlchemy connector manager."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/Resheba/Alchemynger"
